[package]
name = "cargo-asm"
version = "0.1.0"
authors = ["Adolph C. <adolphc@outlook.com>"]
edition = "2018"

[dependencies]
capstone = { git = "https://github.com/ExPixel/capstone-rs.git", branch = "master" }
gimli = "0.20"
clap = "2.33"
anyhow = "1.0"
goblin = "0.2"
rustc-demangle = "0.1"
byteorder = "1.3"
shellexpand = "2.0"
cargo_metadata = "0.9"
once_cell = "1.3.1"
